# home-cleanup

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: DESIGN.md  USER_STORIES.md
src/clean_home/: __init__.py  __main__.py  actions.py  cli.md  filters.py  logging_conf.py  scanner.py  summarize.py
tests/: TEST_PLAN.md  conftest.py  test_actions.py  test_scanner.py
