[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clean-home"
version = "0.0.2"
description = "Dry-run cleanup CLI"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "CGS Team" }]
dependencies = [
  # TODO: add runtime deps if any (keep stdlib if possible)
  "pytest-mock>=3.15.1",
]

[project.scripts]
# TODO: optional console script entry point
# clean-home = "clean_home.__main__:main"
